--- a/gradle.properties
+++ b/gradle.properties
@@ -32,11 +32,11 @@ mod_name=Azukaar's Fair Difficulty Overhaul
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=Apache-2.0
 # The mod version. See https://semver.org/
-mod_version=0.0.2
+mod_version=0.0.3-1.21
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.azukaar.fair_difficulty_overhaul
+mod_group_id=com.azukaar.difficultyoverhaul
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Azukaar
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
